# MLOPS_advanced_HW1

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cd  pyproject.toml  test.csv.dvc  train.csv.dvc
.dvc/: config
.github/workflows/: main.yml
configs/: config.yaml
configs/m_name/: lin_reg.yaml
configs/models/: boosting_reg.yaml  lasso_reg.yaml
hw-1-advanced-service/: main.py
hw-1-advanced-service/configs/m_name/: hist_gb_boosting.yaml  lasso_reg.yaml
hw-1-advanced-service/train_infer/: infer.py  train.py
reg_params/: lin_reg.yaml
train_infer/: infer.py  train.py
