[tool.poetry]
name = "mlops-hw-1"
version = "0.1.0"
description = "Test package for MLOPS course"
authors = ["Artem Bondarenko <Regall.B@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.18"
hydra-core = "^1.3.2"
jupyter = "^1.0.0"
gitpython = "^3.1.40"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.2"
pandas = "^2.0"
apache-airflow = "*"
mlflow = "^2.9.2"
pre-commit = "^3.0"
dvc = "^3.33.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
